Uploaded image for project: 'Apache NiFi MiNiFi C++'
  1. Apache NiFi MiNiFi C++
  2. MINIFICPP-1116

Segfault when trying to use non-existent C2 protocol class

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • main
    • 0.9.0
    • None
    • Ubuntu 18.04.3 LTS

    Description

      Steps to reproduce:

      1. Compile minifi-cpp with no CoAP support
      2. Configure C2 with nifi.c2.agent.protocol.class=CoapProtocol
      3. Start MiNiFi C++

      Expected behavior:

      Print an error message to stderr, produce a log message with log level of at least error and exit. Alternatively, produce a log message with log level of at least warning and continue execution without C2.

      Actual behavior:

      No output on stderr.
      Error message logged with log level info.
      Segmentation fault in C2Agent.cpp:329, trying to dereference C2Agent::protocol_, but it's null.

      Attachments

        Issue Links

          Activity

            People

              szaszm Marton Szasz
              szaszm Marton Szasz
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1.5h
                  1.5h