MINIFICPP-1116 - Fix error reporting in C2Agent

- Missing CoapProtocol will now result in a fatal error (exception)
instead of segfault. Error reporting is improved.
- C2Agent::protocol_ is now properly deleted
- remove dead code
- avoid unnecessary string copies in loop

Signed-off-by: Arpad Boda <aboda@apache.org>

This closes #706